--- a/client/src/pages/order/Order.css
+++ b/client/src/pages/order/Order.css
@@ -2,3 +2,21 @@
     padding: 15px;
     text-align: center;
 }
+
+.order-lists {
+    margin: auto;
+    width: 75%;
+    max-width: 750px;
+    padding: 10px;
+}
+
+.order-cta {
+    margin: auto;
+    width: 50%;
+    text-align: center;
+    padding: 10px;
+}
+
+.order-cta button {
+    margin: 10px;
+}
