--- a/client/src/components/menu/Menu.css
+++ b/client/src/components/menu/Menu.css
@@ -17,6 +17,7 @@
     margin: auto;
     padding: 20px;
     height: 100px;
-    background-color: rgb(226, 226, 226);
+    background-color: #fafafa;
+    border: 1px solid #e8e8e8;
     text-align: center;
 }
