--- a/client/src/components/menuCard/MenuCard.css
+++ b/client/src/components/menuCard/MenuCard.css
@@ -1,13 +1,13 @@
+.menu-card .ant-card-meta-description {
+    height: 30px;
+    width: 100%;
+}
+
 .menu-card {
     width: 200px;
-    height: 250px;
+    margin-bottom: 35px;
 }
-
-.menu-card .ant-card-meta-description {
-    height: 50px;
-}
-
-.menu-card img {
-    width: 100%;
-    height: 100%;
+.menu-image {
+    width: 200px;
+    height: 150px;
 }
