--- a/client/src/components/portalMenu/PortalMenu.css
+++ b/client/src/components/portalMenu/PortalMenu.css
@@ -14,3 +14,13 @@
     padding: 100px;
     text-align: center;
 }
+
+.hyperlink {
+    color: #1890ff;
+    text-decoration: none;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+    -webkit-transition: color 0.3s;
+    transition: color 0.3s;
+}
