--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -11,7 +11,7 @@
     overflow: hidden;
     margin: 0;
     height: 100vh;
-    background-image: url('../../images//home-bg-min.jpg');
+    background-image: url('../../images//home-bg-min.webp');
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
